+ adding secondary gradient + squashing styling bug in puzzles1

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -16,3 +16,4 @@ $failure: #ff5252;
 
 $shadow-color: rgba($accent-color, 0.1);
 $main-gradient: linear-gradient(135deg, $accent-color 0%, rgba($accent-color, 0.75) 100%);
+$second-gradient: linear-gradient(135deg, $second-color 0%, rgba($second-color, 0.75) 100%);
